# Credit-Risk-Probability-Model-for-Alternative-Data-wek_4

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  k-Probability-Model-for-Alternative-Data-wek_4srcdata_processing.py  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
mlruns/.trash/184276705770232209/: meta.yaml
mlruns/.trash/868274394496907315/: meta.yaml
mlruns/0/: meta.yaml
mlruns/577733308602261579/: meta.yaml
mlruns/577733308602261579/76630f4e926c4a7dbb108c6843641b7b/: meta.yaml
mlruns/577733308602261579/76630f4e926c4a7dbb108c6843641b7b/metrics/: accuracy  f1_score  precision  recall  roc_auc
mlruns/577733308602261579/cd56fcdad3b644ab9b9329c93acd9d1e/: meta.yaml
mlruns/577733308602261579/cd56fcdad3b644ab9b9329c93acd9d1e/metrics/: accuracy  f1_score  precision  recall  roc_auc
mlruns/577733308602261579/models/m-203657d7ddaa43cdb39f6b857c21179e/: meta.yaml
mlruns/577733308602261579/models/m-fc33ec7453ab4921b0248b22a6b58826/: meta.yaml
mlruns/729605374886097950/: meta.yaml
mlruns/729605374886097950/5868eaa2e8d046188242d5279a43dc46/: meta.yaml
mlruns/729605374886097950/60bd67ae58264e8684d20c74ebd28d8d/: meta.yaml
mlruns/models/CreditRiskModel/: meta.yaml
notebooks/: eda.ipynb  feature_eng.ipynb  mlflow.db  proxy.ipynb  train.ipynb
notebooks/mlruns/494904809433481285/: meta.yaml
notebooks/models/best_model/: MLmodel
src/: data_processing.py  eda.py  proxy.py  train.py
src/api/: main.py  pydantic_models.py
src/credit_risk_alt_data.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_data_processing.py
(+106 files in other folders)
